WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226350
[Cocoa] Return immediately when asked to paint an AVPlayer that hasn't reached HaveCurrentData
https://bugs.webkit.org/show_bug.cgi?id=226350
Summary
[Cocoa] Return immediately when asked to paint an AVPlayer that hasn't reache...
Eric Carlson
Reported
2021-05-27 13:11:24 PDT
An AVPlayer that hasn't reached HaveCurrentData won't be able to provide a frame, so don't bother asking.
Attachments
Patch
(2.55 KB, patch)
2021-05-27 13:21 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2021-05-27 13:17:45 PDT
rdar://77910715
Eric Carlson
Comment 2
2021-05-27 13:21:08 PDT
Created
attachment 429916
[details]
Patch
EWS
Comment 3
2021-05-28 09:43:45 PDT
Committed
r278203
(
238246@main
): <
https://commits.webkit.org/238246@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 429916
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug