[Cocoa] Return immediately when asked to paint an AVPlayer that hasn't reached HaveCurrentData https://bugs.webkit.org/show_bug.cgi?id=226350 rdar://77910715

Reviewed by Jer Noble.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateLastPixelBuffer): Return immediately
if readyState < HaveCurrentData.
(WebCore::MediaPlayerPrivateAVFoundationObjC::videoOutputHasAvailableFrame): Ditto.
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateLastImage): Ditto.


Canonical link: https://commits.webkit.org/238246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@278203 268f45cc-cd09-0410-ab3c-d52691b4dbfc